# pdlog

./: .gitignore  .pre-commit-config.yaml  README.md  requirements-dev.txt  setup.cfg  setup.py
pdlog/: __init__.py  _core.py  accessor.py  accessors.py  format.py  logging.py  string.py  utils.py
tests/: test_accessors.py  test_core.py  test_format.py  test_logging.py  test_string.py  test_utils.py
