[metadata]
name = pdlog
version = 0.1.0.post0
description = Logging for pandas dataframes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataProphet/pdlog
author = Wasim Lorgat
author_email = wasim@dataprophet.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    pandas
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*

[flake8]
ignore =
    # E203 is not PEP8 compliant https://github.com/ambv/black#slices
    E203,
    # W503 is not PEP8 compliant https://github.com/ambv/black#line-breaks--binary-operators
    W503
    # F821 raises on mypy's "type: ignore" comments
    F821
max_line_length = 88

[mypy]
ignore_missing_imports = True
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-tests/*]
disallow_untyped_defs = false

[tool:pytest]
addopts =
    --doctest-modules
testpaths =
    pdlog
    tests
python_files = test*.py

[coverage:run]
omit =
    .venv/*, venv/*, .env/*, env/*
